compiler/testData/diagnostics/tests/packExpansion/recursiveFunctionPackCycle.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
// DIAGNOSTICS: -UNUSED_PARAMETER

fun loop(<!VALUE_PARAMETER_WITH_NO_TYPE_ANNOTATION!>...loop.$props<!>) {
    <!UNRESOLVED_REFERENCE!>a<!>
}

/* GENERATED_FIR_TAGS: functionDeclaration */
